.ci/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabiane-data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabiane-data-api
  template:
    metadata:
      labels:
        app: sabiane-data-api
    spec:
      containers:
        - name: sabiane-data-api
          image: inseefrlab/sabiane-data:1.4.9
